--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,17 +1,29 @@
-<div id="<%= dom_id task %>">
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Title:</strong>
-    <%= task.title %>
-  </p>
+<%= turbo_frame_tag task do %>
+  <%= form_with(model: task, class: "contents") do |form| %>
+    <% if task.errors.any? %>
+      <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
+        <h2><%= pluralize(task.errors.count, "error") %> prohibited this task from being saved:</h2>
 
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Completed:</strong>
-    <%= task.completed %>
-  </p>
+        <ul>
+          <% task.errors.each do |error| %>
+            <li><%= error.full_message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
 
-  <% if action_name != "show" %>
-    <%= link_to "Show this task", task, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <%= link_to 'Edit this task', edit_task_path(task), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
-    <hr class="mt-6">
+    <div class="flex flex-row">
+
+      <div class="my-5 w-1/5">
+        <%= form.label :completed %>
+        <%= form.check_box :completed, class: "block mt-2 h-5 w-5", onchange: 'this.form.requestSubmit()' %>
+      </div>
+
+      <div class="my-5 w-4/5">
+        <%= form.text_field :title, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full", disabled: true %>
+      </div>
+
+    </div>
   <% end %>
-</div>
+
+<% end %>
