--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,3 +1,5 @@
+<%= turbo_stream_from :tasks %>
+<%= turbo_stream_from :completed_tasks %>
 <div class="w-full">
   <% if notice.present? %>
     <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
@@ -5,10 +7,22 @@
 
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl">Tasks</h1>
-    <%= link_to 'New task', new_task_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
 
+  <h2 class="font-bold">Add new task </h2>
+  <%= turbo_frame_tag 'new_task' do %>
+    <%= render 'form', task: Task.new %>
+  <% end %>
+
+  <hr />
+  <h1 class="font-bold text-4xl">TODO</h1>
   <div id="tasks" class="min-w-full">
     <%= render @tasks %>
+  </div>
+
+  <hr />
+  <h1 class="font-bold text-4xl">Completed</h1>
+  <div id="completed_tasks" class="min-w-full">
+    <%= render @completed_tasks %>
   </div>
 </div>
