--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -3,7 +3,7 @@
     <%= form_with(model: task, class: "contents") do |form| %>
       <% if task.errors.any? %>
         <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
-          <h2><%= pluralize(task.errors.count, "error") %> prohibited this task from being
+          <h2><%= pluralize(task.errors.count, "error") %> <%= t('activerecord.errors.template.header') %>
             saved:</h2>
 
           <ul>
