Refactor to optional chaining

--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -13,22 +13,21 @@
       <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
         <dt class="text-sm font-medium text-gray-500">Account ID</dt>
         <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0">
-          <%= @company.account.id %>
+          <%= @company&.account&.id %>
         </dd>
       </div>
       <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
         <dt class="text-sm font-medium text-gray-500">Credit Card ID</dt>
         <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0">
-          <% @company.account.credit_card.id %>
+          <%= @company&.account&.credit_card&.id %>
         </dd>
       </div>
       <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
         <dt class="text-sm font-medium text-gray-500">Credit Card number</dt>
         <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0">
-          <%= @company.account.credit_card.number %>
+          <%= @company&.account&..credit_card&number %>
         </dd>
       </div>
-
     </dl>
   </div>
 </div>
